# syd

./: .env  .gitignore  Cargo.toml  readme.md
data/: data.db
migrations/2022-11-11-023639_create_events/: up.sql
src/: commands.rs  lib.rs  main.rs  models.rs  schema.rs  tests.rs
src/models/: transformed.rs
src/modules/: mod.rs
syd_macros/: Cargo.toml
syd_macros/src/: lib.rs
