[package]
name = "syd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.0", features = ["sqlite", "chrono"] }
dotenvy = "0.15.6" 
chrono = "0.4.22"
anyhow = "1.0"
syd_macros = { path = "syd_macros"}